...
            if !summonerName.isEmpty {
                if Summoner.isSummonerNameValid(name: summonerName) {
                    searchButton.isEnabled = false
                    activityIndicator.startAnimating()
                    fetchSummoner(named: summonerName)
                } else {
                    setupLabel.text = "Invalid summoner name"
                }
            }
        }
    }
    
    private func fetchNewestVersion() {
...
